# DayTradingSimulator

./: .gitignore  CMakeLists.txt
include/: UI.h  Upgrades.h  Utils.h
src/: GameState.cpp  GameState.h  main.cpp
src/Classes/: Company.cpp  Company.h  GameState.cpp  GameState.h  MarketData.h  PlayerData.cpp  PlayerData.h  Stock.cpp  Stock.h
src/Classes/Transactions/: BuyOrder.h  SellOrder.h  TransactionManager.cpp  TransactionManager.h  TransactionRecord.h
src/Menu/: Menu.cpp  Menu.h
src/Menu/Screens/: CompaniesScreen.cpp  CompaniesScreen.h  DashboardScreen.cpp  DashboardScreen.h  HistoryScreen.cpp  HistoryScreen.h  PortfolioScreen.cpp  PortfolioScreen.h  UpgradesScreen.cpp  UpgradesScreen.h
src/Objects/: GenerateRandomMarket.cpp  GenerateRandomMarket.h  Graph.cpp  Graph.h  Layout.h  Menu.cpp  Menu.h  MessageDisplay.cpp  MessageDisplay.h  MonthDisplay.cpp  MonthDisplay.h  PopUpWindow.cpp  PopUpWindow.h  ToggleButton.cpp  ToggleButton.h
src/Objects/UI/: Button.cpp  Button.h
src/Upgrades/: Upgrade.cpp  Upgrade.h  UpgradeBuilder.cpp  UpgradeBuilder.h  UpgradeHandler.cpp  UpgradeHandler.h
